Fixing the loader and the links and the missing h1

--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -14,7 +14,10 @@
 
 <body>
     <header>
-        <div class="logo"><a href="index.html"><i class="fa-solid fa-arrow-left-long"></i></a>Ohmyfood</div>
+        <div class="logo">
+            <a href="index.html">
+            <i class="fa-solid fa-arrow-left-long"></i></a>Ohmyfood      
+        </div>
         <div><img src="Images/lanoteenchantee.jpg" alt="lanoteenchantee" /></div>
     </header>
 
@@ -24,7 +27,7 @@
 
         <section>
             <div class="nomdurestaurant1">
-                <h2>La note enchantée</h2>
+                <h1>La note enchantée</h1>
                 <div class="liker">
                     <i class="fa-solid fa-heart fullheart"></i>
                     <i class="fa-regular fa-heart"></i>
@@ -35,9 +38,9 @@
 
             <div class="menu">ENTRÉES</div>
             <article class="choixmenu">
-                <h3><span class="composition1">Ravioles de foie gras</span>
+                <h2><span class="composition1">Ravioles de foie gras</span>
                     <span class="transparent"></span>
-                </h3>
+                </h2>
                 <p><span class="composition">Accompagnées de leur crème à la truffe</span>
                     <span class="prix">25€</span>
                 </p>
@@ -45,9 +48,9 @@
             </article>
 
             <article class="choixmenu">
-                <h3><span class="composition1">Caviar osciètre</span>
+                <h2><span class="composition1">Caviar osciètre</span>
                     <span class="transparent"></span>
-                </h3>
+                </h2>
                 <p><span class="composition">Sur blini à la farine de blé noir</span>
                     <span class="prix">35€</span>
                 </p>
@@ -55,9 +58,9 @@
             </article>
 
             <article class="choixmenu">
-                <h3><span class="composition1">Homard et espuma de potiron</span>
+                <h2><span class="composition1">Homard et espuma de potiron</span>
                     <span class="transparent"></span>
-                </h3>
+                </h2>
                 <p><span class="composition">Marinés aux zestes d'orange</span>
                     <span class="prix">20€</span>
                 </p>
@@ -66,9 +69,9 @@
             </article>
 
             <article class="choixmenu">
-                <h3><span class="composition1">Foie gras de canard cuit entier</span>
+                <h2><span class="composition1">Foie gras de canard cuit entier</span>
                     <span class="transparent"></span>
-                </h3>
+                </h2>
                 <p><span class="composition">Confiture de figue et pain toasté</span>
                     <span class="prix">35€</span>
                 </p>
@@ -80,9 +83,9 @@
 
             <div class="menu">PLATS</div>
             <article class="choixmenu">
-                <h3><span class="composition1">Noix de coquilles Saint-Jacques</span>
+                <h2><span class="composition1">Noix de coquilles Saint-Jacques</span>
                     <span class="transparent"></span>
-                </h3>
+                </h2>
                 <p><span class="composition">Sur lit de purée de céleri-rave</span>
                     <span class="prix">40€</span>
                 </p>
@@ -90,9 +93,9 @@
             </article>
 
             <article class="choixmenu">
-                <h3><span class="composition1">Langoustine poêlée</span>
+                <h2><span class="composition1">Langoustine poêlée</span>
                     <span class="transparent"></span>
-                </h3>
+                </h2>
                 <p><span class="composition">Et purée de patate douce</span>
                     <span class="prix">35€</span>
                 </p>
@@ -100,9 +103,9 @@
             </article>
 
             <article class="choixmenu">
-                <h3><span class="composition1">Mijoté de queue de boeuf</span>
+                <h2><span class="composition1">Mijoté de queue de boeuf</span>
                     <span class="transparent"></span>
-                </h3>
+                </h2>
                 <p><span class="composition">Et riz sauvage aux zestes de citron</span>
                     <span class="prix">44€</span>
                 </p>
@@ -114,9 +117,9 @@
 
             <div class="menu">DESSERTS</div>
             <article class="choixmenu">
-                <h3><span class="composition1">Macaron noisette et chocolat</span>
+                <h2><span class="composition1">Macaron noisette et chocolat</span>
                     <span class="transparent"></span>
-                </h3>
+                </h2>
                 <p><span class="composition">Glace au caramel brun et sel de Guérande</span>
                     <span class="prix">18€</span>
                 </p>
@@ -125,9 +128,9 @@
             </article>
 
             <article class="choixmenu">
-                <h3><span class="composition1">Baba au rhum revisité</span>
+                <h2><span class="composition1">Baba au rhum revisité</span>
                     <span class="transparent"></span>
-                </h3>
+                </h2>
                 <p><span class="composition">Avec son coulis de citron</span>
                     <span class="prix">22€</span>
                 </p>
@@ -136,9 +139,9 @@
             </article>
 
             <article class="choixmenu">
-                <h3><span class="composition1">Tarte au citron meringuée</span>
+                <h2><span class="composition1">Tarte au citron meringuée</span>
                     <span class="transparent"></span>
-                </h3>
+                </h2>
                 <p><span class="composition">Destructurée</span>
                     <span class="prix">23€</span>
                 </p>
