--- a/index.html
+++ b/index.html
@@ -77,36 +77,38 @@
         <section class="Restaurants">
             <h2>Restaurants</h2>
             <div class="desktopcarte">
-                
+
                 <!----------------- carte La palette du goût ------------------>
 
                 <article>
-                    <a href="lapalette.html">
-                        <div class="imagemenu">
-                            <div class="nouveau">Nouveau</div>
-                            <img class="imghome" src="Images/palettedugout.jpg" alt="palettedugout">
-                        </div>
+                    <div class="carte">
+                        <a href="lapalette.html">
+                            <div class="imagemenu">
+                                <div class="nouveau">Nouveau</div>
+                                <img class="imghome" src="Images/palettedugout.jpg" alt="palettedugout">
+                            </div>
+                        </a>
                         <div class="nomdurestaurant1">
-                            <h3>La palette du goût
-                            </h3>
+                            <h3>La palette du goût</h3>
                             <p>Ménilmontant</p>
                         </div>
                         <div class="liker">
                             <i class="fa-solid fa-heart fullheart"></i>
                             <i class="fa-regular fa-heart"></i>
                         </div>
-                    </a>
+                    </div>
                 </article>
 
                 <!----------------- carte La note enchantée ------------------>
 
                 <article>
-
-                    <a href="lanoteenchantee.html">
-                        <div class="imagemenu">
-                            <div class="nouveau">Nouveau</div>
-                            <img class="imghome" src="Images/lanoteenchantee.jpg" alt="lanoteenchantee" />
-                        </div>
+                    <div class="carte">
+                        <a href="lanoteenchantee.html">
+                            <div class="imagemenu">
+                                <div class="nouveau">Nouveau</div>
+                                <img class="imghome" src="Images/lanoteenchantee.jpg" alt="lanoteenchantee" />
+                            </div>
+                        </a>
                         <div class="nomdurestaurant1">
                             <h3>La note enchantée
                             </h3>
@@ -117,7 +119,7 @@
                             <i class="fa-solid fa-heart fullheart"></i>
                             <i class="fa-regular fa-heart"></i>
                         </div>
-                    </a>
+                    </div>
                 </article>
             </div>
 
@@ -125,10 +127,12 @@
 
             <div class="desktopcarte">
                 <article>
-                    <a href="menualafrancaise.html">
-                        <div class="imagemenu">
-                            <img class="imghome" src="Images/alafrancaise.jpg" alt="alafrancaise" />
-                        </div>
+                    <div class="carte">
+                        <a href="menualafrancaise.html">
+                            <div class="imagemenu">
+                                <img class="imghome" src="Images/alafrancaise.jpg" alt="alafrancaise" />
+                            </div>
+                        </a>
                         <div class="nomdurestaurant1">
                             <h3>Á la Française
                             </h3>
@@ -138,16 +142,18 @@
                             <i class="fa-solid fa-heart fullheart"></i>
                             <i class="fa-regular fa-heart"></i>
                         </div>
-                    </a>
+                    </div>
                 </article>
 
                 <!----------------- carte délice des sens ------------------>
 
                 <article>
-                    <a href="lesdelices.html">
-                        <div class="imagemenu">
-                            <img class="imghome" src="Images/lesdelices.jpg" alt="lesdelices" />
-                        </div>
+                    <div class="carte">
+                        <a href="lesdelices.html">
+                            <div class="imagemenu">
+                                <img class="imghome" src="Images/lesdelices.jpg" alt="lesdelices" />
+                            </div>
+                        </a>
                         <div class="nomdurestaurant1">
                             <h3>Le délice des sens</h3>
                             <p>Folie-Méricourt</p>
@@ -156,7 +162,7 @@
                             <i class="fa-solid fa-heart fullheart"></i>
                             <i class="fa-regular fa-heart"></i>
                         </div>
-                    </a>
+                    </div>
                 </article>
             </div>
         </section>
