Update before evaluation

--- a/lesdelices.html
+++ b/lesdelices.html
@@ -54,11 +54,11 @@
             </article>
 
             <article class="choixmenu">
-                <h2><span class="composition1">Velouté de cèpes</span>
+                <h2><span class="composition1">Poulet rôti aux herbes de Provence</span>
                     <span class="transparent"></span>
                 </h2>
-                <p><span class="composition">Aux truffes</span>
-                    <span class="prix">20€</span>
+                <p><span class="composition">Et sa crème de truffe</span>
+                    <span class="prix">40€</span>
                 </p>
                 <div class="valider"><i class="fa-solid fa-check"></i></div>
             </article>
@@ -100,11 +100,11 @@
 
             <div class="menu">DESSERTS</div>
             <article class="choixmenu">
-                <h2><span class="composition1">Farandole de desserts</span>
+                <h2><span class="composition1">Oeuf au plat</span>
                     <span class="transparent"></span>
                 </h2>
-                <p><span class="composition">Du chef</span>
-                    <span class="prix">18€</span>
+                <p><span class="composition">Assaisonné à la truffe sur lit de caviar</span>
+                    <span class="prix">76€</span>
                 </p>
                 <div class="valider"><i class="fa-solid fa-check"></i></div>
             </article>
