--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -16,7 +16,7 @@
     <header>
         <div class="logo">
             <a href="index.html">
-            <i class="fa-solid fa-arrow-left-long"></i></a>Ohmyfood      
+                <i class="fa-solid fa-arrow-left-long"></i></a>Ohmyfood
         </div>
         <div><img src="Images/lanoteenchantee.jpg" alt="lanoteenchantee" /></div>
     </header>
@@ -34,120 +34,124 @@
                 </div>
             </div>
 
-            <!----------------- Entrées ------------------>
+            <ul>
+                <!----------------- Entrées ------------------>
+                <li class="menu-item">
+                    <div class="menu">ENTRÉES</div>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Ravioles de foie gras</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Accompagnées de leur crème à la truffe</span>
+                            <span class="prix">25€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
 
-            <div class="menu">ENTRÉES</div>
-            <article class="choixmenu">
-                <h2><span class="composition1">Ravioles de foie gras</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Accompagnées de leur crème à la truffe</span>
-                    <span class="prix">25€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Caviar osciètre</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Sur blini à la farine de blé noir</span>
+                            <span class="prix">35€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
 
-            <article class="choixmenu">
-                <h2><span class="composition1">Caviar osciètre</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Sur blini à la farine de blé noir</span>
-                    <span class="prix">35€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Homard et espuma de potiron</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Marinés aux zestes d'orange</span>
+                            <span class="prix">20€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
 
-            <article class="choixmenu">
-                <h2><span class="composition1">Homard et espuma de potiron</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Marinés aux zestes d'orange</span>
-                    <span class="prix">20€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
 
-            </article>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Foie gras de canard cuit entier</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Confiture de figue et pain toasté</span>
+                            <span class="prix">35€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
 
-            <article class="choixmenu">
-                <h2><span class="composition1">Foie gras de canard cuit entier</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Confiture de figue et pain toasté</span>
-                    <span class="prix">35€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
+                </li>
+                <!----------------- Plats ------------------>
+                <li class="menu-item">
+                    <div class="menu">PLATS</div>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Noix de coquilles Saint-Jacques</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Sur lit de purée de céleri-rave</span>
+                            <span class="prix">40€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
 
-            </article>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Langoustine poêlée</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Et purée de patate douce</span>
+                            <span class="prix">35€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
 
-            <!----------------- Plats ------------------>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Mijoté de queue de boeuf</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Et riz sauvage aux zestes de citron</span>
+                            <span class="prix">44€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
 
-            <div class="menu">PLATS</div>
-            <article class="choixmenu">
-                <h2><span class="composition1">Noix de coquilles Saint-Jacques</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Sur lit de purée de céleri-rave</span>
-                    <span class="prix">40€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
+                    </article>
+                </li>
+                <!----------------- Desserts ------------------>
+                <li class="menu-item">
+                    <div class="menu">DESSERTS</div>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Macaron noisette et chocolat</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Glace au caramel brun et sel de Guérande</span>
+                            <span class="prix">18€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
 
-            <article class="choixmenu">
-                <h2><span class="composition1">Langoustine poêlée</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Et purée de patate douce</span>
-                    <span class="prix">35€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
+                    </article>
 
-            <article class="choixmenu">
-                <h2><span class="composition1">Mijoté de queue de boeuf</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Et riz sauvage aux zestes de citron</span>
-                    <span class="prix">44€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Baba au rhum revisité</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Avec son coulis de citron</span>
+                            <span class="prix">22€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
 
-            </article>
+                    </article>
 
-            <!----------------- Desserts ------------------>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Tarte au citron meringuée</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Destructurée</span>
+                            <span class="prix">23€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
 
-            <div class="menu">DESSERTS</div>
-            <article class="choixmenu">
-                <h2><span class="composition1">Macaron noisette et chocolat</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Glace au caramel brun et sel de Guérande</span>
-                    <span class="prix">18€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
+                </li>
+            </ul>
 
-            </article>
-
-            <article class="choixmenu">
-                <h2><span class="composition1">Baba au rhum revisité</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Avec son coulis de citron</span>
-                    <span class="prix">22€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-
-            </article>
-
-            <article class="choixmenu">
-                <h2><span class="composition1">Tarte au citron meringuée</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Destructurée</span>
-                    <span class="prix">23€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-
-            </article>
         </section>
 
         <div class="boutonexplore commandermenu">
