--- a/lesdelices.html
+++ b/lesdelices.html
@@ -29,105 +29,107 @@
                     <i class="fa-regular fa-heart"></i>
                 </div>
             </div>
+            <ul>
+                <!----------------- Entrées ------------------>
+                <li class="menu-item">
+                    <div class="menu">ENTRÉES</div>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Tartare de thon</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Assaisonné au yuzu</span>
+                            <span class="prix">25€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
 
-            <!----------------- Entrées ------------------>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Bouchée de homard croustillant</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Et sa farandole de petits légumes</span>
+                            <span class="prix">35€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
 
-            <div class="menu">ENTRÉES</div>
-            <article class="choixmenu">
-                <h2><span class="composition1">Tartare de thon</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Assaisonné au yuzu</span>
-                    <span class="prix">25€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Poulet rôti aux herbes de Provence</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Et sa crème de truffe</span>
+                            <span class="prix">40€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
+                </li>
+                <!----------------- Plats ------------------>
+                <li class="menu-item">
+                    <div class="menu">PLATS</div>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Poulet rôti aux herbes de Provence</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Et sa crème de truffe</span>
+                            <span class="prix">40€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
 
-            <article class="choixmenu">
-                <h2><span class="composition1">Bouchée de homard croustillant</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Et sa farandole de petits légumes</span>
-                    <span class="prix">35€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Langouste rôtie</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Et ses légumes de saison</span>
+                            <span class="prix">35€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
 
-            <article class="choixmenu">
-                <h2><span class="composition1">Poulet rôti aux herbes de Provence</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Et sa crème de truffe</span>
-                    <span class="prix">40€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Côte de boeuf Angus</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Et sa purée de panais</span>
+                            <span class="prix">44€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
+                </li>
+                <!----------------- Desserts ------------------>
+                <li class="menu-item">
+                    <div class="menu">DESSERTS</div>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Oeuf au plat</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Assaisonné à la truffe sur lit de caviar</span>
+                            <span class="prix">76€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
 
-            <!----------------- Plats ------------------>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Crème brûlée</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Revisitée</span>
+                            <span class="prix">22€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
 
-            <div class="menu">PLATS</div>
-            <article class="choixmenu">
-                <h2><span class="composition1">Poulet rôti aux herbes de Provence</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Et sa crème de truffe</span>
-                    <span class="prix">40€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
-
-            <article class="choixmenu">
-                <h2><span class="composition1">Langouste rôtie</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Et ses légumes de saison</span>
-                    <span class="prix">35€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
-
-            <article class="choixmenu">
-                <h2><span class="composition1">Côte de boeuf Angus</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Et sa purée de panais</span>
-                    <span class="prix">44€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
-
-            <!----------------- Desserts ------------------>
-
-            <div class="menu">DESSERTS</div>
-            <article class="choixmenu">
-                <h2><span class="composition1">Oeuf au plat</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Assaisonné à la truffe sur lit de caviar</span>
-                    <span class="prix">76€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
-
-            <article class="choixmenu">
-                <h2><span class="composition1">Crème brûlée</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Revisitée</span>
-                    <span class="prix">22€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
-
-            <article class="choixmenu">
-                <h2><span class="composition1">Tiramisu</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Á la noisette</span>
-                    <span class="prix">23€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Tiramisu</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Á la noisette</span>
+                            <span class="prix">23€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
+                </li>
+            </ul>
         </section>
 
         <div class="boutonexplore commandermenu">
