--- a/lapalette.html
+++ b/lapalette.html
@@ -31,106 +31,108 @@
                     <i class="fa-regular fa-heart"></i>
                 </div>
             </div>
+            <ul>
+                <!----------------- Entrées ------------------>
+                <li class="menu-item">
+                    <div class="menu">ENTRÉES</div>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Fricassé d'escargots</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Au piment d'Espelette</span>
+                            <span class="prix">25€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
 
-            <!----------------- Entrées ------------------>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Foie gras de canard mi-cuit</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Et ses copeaux de truffe noire</span>
+                            <span class="prix">35€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
 
-            <div class="menu">ENTRÉES</div>
-            <article class="choixmenu">
-                <h2><span class="composition1">Fricassé d'escargots</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Au piment d'Espelette</span>
-                    <span class="prix">25€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Oeuf au plat</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Assaisonné à la truffe sur lit de caviar</span>
+                            <span class="prix">20€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
+                </li>
+                <!----------------- Plats ------------------>
+                <li class="menu-item">
+                    <div class="menu">PLATS</div>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Filet de boeuf aux herbes</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Accompagné de sa ribambelle de légumes</span>
+                            <span class="prix">40€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
 
-            <article class="choixmenu">
-                <h2><span class="composition1">Foie gras de canard mi-cuit</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Et ses copeaux de truffe noire</span>
-                    <span class="prix">35€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Parmentier de queue de boeuf</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Á la truffe noire sur sa purée de panais</span>
+                            <span class="prix">35€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
 
-            <article class="choixmenu">
-                <h2><span class="composition1">Oeuf au plat</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Assaisonné à la truffe sur lit de caviar</span>
-                    <span class="prix">20€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Filet de turbot</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Aux agrumes</span>
+                            <span class="prix">44€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
+                </li>
+                <!----------------- Desserts ------------------>
+                <li class="menu-item">
+                    <div class="menu">DESSERTS</div>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Paris-Brest</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Revisité</span>
+                            <span class="prix">18€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
 
-            <!----------------- Plats ------------------>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Macaron au chocolat d'exception</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Et glace à la vanille de Madagascar</span>
+                            <span class="prix">22€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
 
-            <div class="menu">PLATS</div>
-            <article class="choixmenu">
-                <h2><span class="composition1">Filet de boeuf aux herbes</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Accompagné de sa ribambelle de légumes</span>
-                    <span class="prix">40€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Mousse au chocolat</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Au piment d'Espelette et à la truffe de noire</span>
+                            <span class="prix">23€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
 
-            <article class="choixmenu">
-                <h2><span class="composition1">Parmentier de queue de boeuf</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Á la truffe noire sur sa purée de panais</span>
-                    <span class="prix">35€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
-
-            <article class="choixmenu">
-                <h2><span class="composition1">Filet de turbot</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Aux agrumes</span>
-                    <span class="prix">44€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
-
-            <!----------------- Desserts ------------------>
-
-            <div class="menu">DESSERTS</div>
-            <article class="choixmenu">
-                <h2><span class="composition1">Paris-Brest</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Revisité</span>
-                    <span class="prix">18€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
-
-            <article class="choixmenu">
-                <h2><span class="composition1">Macaron au chocolat d'exception</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Et glace à la vanille de Madagascar</span>
-                    <span class="prix">22€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
-
-            <article class="choixmenu">
-                <h2><span class="composition1">Mousse au chocolat</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Au piment d'Espelette et à la truffe de noire</span>
-                    <span class="prix">23€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-
-            </article>
+                    </article>
+                </li>
+            </ul>
         </section>
 
         <div class="boutonexplore commandermenu">
