--- a/menualafrancaise.html
+++ b/menualafrancaise.html
@@ -29,109 +29,111 @@
                     <i class="fa-regular fa-heart"></i>
                 </div>
             </div>
+            <ul>
+                <!----------------- Entrées ------------------>
+                <li class="menu-item">
+                    <div class="menu">ENTRÉES</div>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Tartare de poulpe acidulé</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Aux zestes d'orange</span>
+                            <span class="prix">25€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
 
-            <!----------------- Entrées ------------------>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Velouté de légumes d'antan</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Carotte, panais, topinambour</span>
+                            <span class="prix">35€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
 
-            <div class="menu">ENTRÉES</div>
-            <article class="choixmenu">
-                <h2><span class="composition1">Tartare de poulpe acidulé</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Aux zestes d'orange</span>
-                    <span class="prix">25€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
+                    </article>
 
-            <article class="choixmenu">
-                <h2><span class="composition1">Velouté de légumes d'antan</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Carotte, panais, topinambour</span>
-                    <span class="prix">35€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Soupe à l'oignon</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Revisitée</span>
+                            <span class="prix">20€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
 
-            </article>
+                    </article>
+                </li>
+                <!----------------- Plats ------------------>
+                <li class="menu-item">
+                    <div class="menu">PLATS</div>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Coquilles Saint-Jacques</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Accompagnées d'une purée de panais</span>
+                            <span class="prix">40€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
 
-            <article class="choixmenu">
-                <h2><span class="composition1">Soupe à l'oignon</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Revisitée</span>
-                    <span class="prix">20€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
 
-            </article>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Maigret de canard</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Et parmentier de pommes de terre</span>
+                            <span class="prix">35€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
 
-            <!----------------- Plats ------------------>
+                    </article>
 
-            <div class="menu">PLATS</div>
-            <article class="choixmenu">
-                <h2><span class="composition1">Coquilles Saint-Jacques</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Accompagnées d'une purée de panais</span>
-                    <span class="prix">40€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Pigeonneau d'Ille-et-Vilaine</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Sur son lit de gnocchis aux légumes</span>
+                            <span class="prix">44€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
+                </li>
+                <!----------------- Desserts ------------------>
+                <li class="menu-item">
+                    <div class="menu">DESSERTS</div>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Pétales de violettes glacés</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Et purée de noisettes</span>
+                            <span class="prix">18€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
 
-            </article>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Fondant au chocolat</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Revisité</span>
+                            <span class="prix">22€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
 
-            <article class="choixmenu">
-                <h2><span class="composition1">Maigret de canard</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Et parmentier de pommes de terre</span>
-                    <span class="prix">35€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-
-            </article>
-
-            <article class="choixmenu">
-                <h2><span class="composition1">Pigeonneau d'Ille-et-Vilaine</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Sur son lit de gnocchis aux légumes</span>
-                    <span class="prix">44€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
-
-            <!----------------- Desserts ------------------>
-
-            <div class="menu">DESSERTS</div>
-            <article class="choixmenu">
-                <h2><span class="composition1">Pétales de violettes glacés</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Et purée de noisettes</span>
-                    <span class="prix">18€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
-
-            <article class="choixmenu">
-                <h2><span class="composition1">Fondant au chocolat</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Revisité</span>
-                    <span class="prix">22€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
-
-            <article class="choixmenu">
-                <h2><span class="composition1">Millefeuille croustillant</span>
-                    <span class="transparent"></span>
-                </h2>
-                <p><span class="composition">Myrtilles et pâtes d'amande</span>
-                    <span class="prix">23€</span>
-                </p>
-                <div class="valider"><i class="fa-solid fa-check"></i></div>
-            </article>
+                    <article class="choixmenu">
+                        <h2><span class="composition1">Millefeuille croustillant</span>
+                            <span class="transparent"></span>
+                        </h2>
+                        <p><span class="composition">Myrtilles et pâtes d'amande</span>
+                            <span class="prix">23€</span>
+                        </p>
+                        <div class="valider"><i class="fa-solid fa-check"></i></div>
+                    </article>
+                </li>
+            </ul>
         </section>
 
         <div class="boutonexplore commandermenu">
