Fixing the menu of restaurant

--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
 
-            <ul>
+            <ul class="items">
                 <!----------------- Entrées ------------------>
                 <li class="menu-item">
                     <div class="menu">ENTRÉES</div>
