--- a/lapalette.html
+++ b/lapalette.html
@@ -31,7 +31,7 @@
                     <i class="fa-regular fa-heart"></i>
                 </div>
             </div>
-            <ul>
+            <ul class="items">
                 <!----------------- Entrées ------------------>
                 <li class="menu-item">
                     <div class="menu">ENTRÉES</div>
