--- a/lesdelices.html
+++ b/lesdelices.html
@@ -29,7 +29,7 @@
                     <i class="fa-regular fa-heart"></i>
                 </div>
             </div>
-            <ul>
+            <ul class="items">
                 <!----------------- Entrées ------------------>
                 <li class="menu-item">
                     <div class="menu">ENTRÉES</div>
